--- a/wishbucket_android/Wishbucket/app/src/main/res/layout/activity_main.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent">
     <com.facebook.login.widget.LoginButton
         android:id="@+id/btnLogin"
-        android:text="Login with Kemo App"
+        android:text="Login with App"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
