--- a/wishbucket_android/Wishbucket/app/src/main/res/layout/activity_main.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/res/layout/activity_main.xml
@@ -2,12 +2,61 @@
 <RelativeLayout
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/background"
     android:layout_width="match_parent">
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/btnLogin"
-        android:text="Login with App"
-        android:layout_centerInParent="true"
+
+    <View
+        android:background="#70000000"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imgLogo"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/txtAppTitle"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:textSize="45sp"
+            android:text="@string/title_wishbucket"
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_height="wrap_content" />
+
+
+        <TextView
+            android:id="@+id/txtMessage"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:textSize="22sp"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/message_gift"
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
+            android:layout_height="wrap_content" />
+
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/btnLogin"
+            android:text="Login with App"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="9dp"
+            android:paddingBottom="9dp"/>
+
+    </LinearLayout>
+
 
 </RelativeLayout>
