--- a/wishbucket_android/Wishbucket/app/src/main/res/layout/content_home.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/res/layout/content_home.xml
@@ -14,25 +14,29 @@
     tools:showIn="@layout/activity_home">
 
     <Button
-        android:text="Button"
+        android:text="Call Api Test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="39dp"
-        android:layout_marginStart="39dp"
         android:layout_marginTop="38dp"
-        android:id="@+id/button2" />
+        android:id="@+id/button2"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button2"
+        android:layout_toLeftOf="@+id/button2"
+        android:layout_toStartOf="@+id/button2"
+        android:id="@+id/jsonResponse" />
 
     <Button
-        android:text="Button"
+        android:text="Open Recommendation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button2"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="35dp"
-        android:layout_marginEnd="35dp"
-        android:id="@+id/button3" />
+        android:id="@+id/open_recommendation_button"
+        android:layout_marginBottom="95dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
