--- a/wishbucket_android/Wishbucket/app/src/main/res/layout/content_recommendation.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/res/layout/content_recommendation.xml
@@ -12,35 +12,11 @@
     tools:context="dev.ibu.wishbucket.views.activities.RecommendationActivity"
     tools:showIn="@layout/activity_recommendation">
 
-    <ImageButton
+    <com.facebook.login.widget.ProfilePictureView
+        android:id="@+id/profile_picture"
         android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:id="@+id/imageButton"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:id="@+id/imageButton2"
-        android:layout_below="@+id/imageButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="35dp"
-        android:layout_alignRight="@+id/imageButton"
-        android:layout_alignEnd="@+id/imageButton" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:id="@+id/imageButton3"
-        android:layout_below="@+id/imageButton2"
-        android:layout_marginTop="33dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/imageButton2"
-        android:layout_alignEnd="@+id/imageButton2" />
 </RelativeLayout>
