--- a/wishbucket_android/Wishbucket/app/src/main/res/layout/activity_main.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,14 @@
         android:background="#70000000"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_centerInParent="true"
         android:gravity="center"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
 
         <ImageView
             android:id="@+id/imgLogo"
