--- a/wishbucket_android/Wishbucket/app/src/main/res/layout/content_home.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/res/layout/content_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_home"
@@ -12,31 +12,152 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="dev.ibu.wishbucket.views.activities.HomeActivity"
     tools:showIn="@layout/activity_home">
-
-    <Button
-        android:text="Call Api Test"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <TextView
+        android:text="Upcoming birthdays"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="38dp"
-        android:id="@+id/button2"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:id="@+id/users_textView" />
+
+    <HorizontalScrollView
+        android:id="@+id/horizontal_scroll"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/users_textView"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_height="150dp">
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+        </LinearLayout>
+
+    </HorizontalScrollView>
 
     <TextView
-        android:text="TextView"
+        android:text="More from Wishbucket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button2"
-        android:layout_toLeftOf="@+id/button2"
-        android:layout_toStartOf="@+id/button2"
-        android:id="@+id/jsonResponse" />
+        android:layout_below="@+id/horizontal_scroll"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:id="@+id/features_textView" />
 
-    <Button
-        android:text="Open Recommendation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/open_recommendation_button"
-        android:layout_marginBottom="95dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_marginTop="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_below="@+id/features_textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@drawable/fireworks"
+        android:id="@+id/newYearCard">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Year. Make it unforgettable"
+            android:textColor="#fff"
+            android:textSize="16dp"
+            android:layout_margin="2dp"
+            android:id="@+id/nyTitle"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/nyTitle"
+            android:layout_marginLeft="2dp"
+            android:text="Coming soon"
+            android:textColor="#fff"
+            android:textSize="10dp"/>
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_below="@id/newYearCard"
+        android:weightSum="2"
+        android:layout_height="130dp">
+
+        <RelativeLayout
+            android:text="More from wishbucket"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_below="@+id/features_textView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/fireworks"
+            android:id="@+id/occasionsCard">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Custom Occasion"
+                android:textColor="#fff"
+                android:textSize="16dp"
+                android:layout_margin="2dp"
+                android:id="@+id/ocTitle"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ocTitle"
+                android:layout_marginLeft="2dp"
+                android:text="Coming soon"
+                android:textColor="#fff"
+                android:textSize="10dp"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:text="More from wishbucket"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_below="@+id/features_textView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/fireworks"
+            android:layout_weight="1"
+            android:id="@+id/anniversaryCard">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Anniversary presents"
+                android:textColor="#fff"
+                android:textSize="16dp"
+                android:layout_margin="2dp"
+                android:id="@+id/anTitle"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/anTitle"
+                android:layout_marginLeft="2dp"
+                android:text="Coming soon"
+                android:textColor="#fff"
+                android:textSize="10dp"/>
+
+        </RelativeLayout>
+    </LinearLayout>
+    </RelativeLayout>
+</ScrollView>
