--- a/wishbucket_android/Wishbucket/app/src/main/res/layout/fbuser_card.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/res/layout/fbuser_card.xml
@@ -4,8 +4,8 @@
     android:layout_width="300dp" android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
         app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
         android:scaleType="fitXY"
         android:padding="2dp"
