--- a/wishbucket_android/Wishbucket/app/src/main/res/layout/content_home.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/res/layout/content_home.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="dev.ibu.wishbucket.views.activities.HomeActivity"
@@ -15,28 +15,28 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <TextView
-        android:text="Upcoming birthdays"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:id="@+id/users_textView" />
 
-    <HorizontalScrollView
+        <TextView
+            android:text="Upcoming birthdays"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/users_textView"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="8dp"
+            android:layout_alignLeft="@+id/horizontal_scroll"
+            android:layout_alignStart="@+id/horizontal_scroll" />
+
+        <HorizontalScrollView
         android:id="@+id/horizontal_scroll"
         android:layout_width="match_parent"
         android:layout_below="@+id/users_textView"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_height="150dp">
 
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:dividerPadding="20dp"
             android:orientation="horizontal" >
         </LinearLayout>
 
@@ -46,44 +46,41 @@
         android:text="More from Wishbucket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="7dp"
+        android:id="@+id/features_textView"
         android:layout_below="@+id/horizontal_scroll"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:id="@+id/features_textView" />
+        android:layout_alignParentStart="true" />
 
-    <RelativeLayout
-        android:layout_marginTop="2dp"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_below="@+id/features_textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:background="@drawable/fireworks"
-        android:id="@+id/newYearCard">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:background="@drawable/fireworks"
+            android:id="@+id/newYearCard"
+            android:layout_below="@+id/features_textView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Year. Make it unforgettable"
-            android:textColor="#fff"
-            android:textSize="16dp"
-            android:layout_margin="2dp"
-            android:id="@+id/nyTitle"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Year. Make it unforgettable"
+                android:textColor="#fff"
+                android:textSize="16dp"
+                android:layout_margin="2dp"
+                android:id="@+id/nyTitle"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/nyTitle"
-            android:layout_marginLeft="2dp"
-            android:text="Coming soon"
-            android:textColor="#fff"
-            android:textSize="10dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/nyTitle"
+                android:layout_marginLeft="2dp"
+                android:text="Coming soon"
+                android:textColor="#fff"
+                android:textSize="10dp"/>
 
-    </RelativeLayout>
+        </RelativeLayout>
 
     <LinearLayout
         android:layout_marginTop="15dp"
@@ -101,9 +98,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_weight="1"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/fireworks"
+            android:background="@drawable/flowers"
             android:id="@+id/occasionsCard">
 
             <TextView
@@ -135,7 +130,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:background="@drawable/fireworks"
+            android:background="@drawable/gift"
             android:layout_weight="1"
             android:id="@+id/anniversaryCard">
 
