--- a/wishbucket_android/Wishbucket/app/src/main/res/layout/fbuser_card.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/res/layout/fbuser_card.xml
@@ -17,14 +17,32 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
+        android:textSize="14dp"
+        android:padding="6dp"
         android:layout_alignParentStart="true"
+        android:textStyle="bold"
+        android:shadowColor="#000"
+        android:shadowRadius="10"
+        android:textAllCaps="true"
+        android:fontFamily="@string/common_google_play_services_restricted_profile_title"
+        android:textColor="#fff"
         android:id="@+id/name" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:id="@+id/birthday" />
+        android:textAlignment="textEnd"
+        android:gravity="end"
+        android:padding="6dp"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        android:shadowColor="#000"
+        android:shadowRadius="6"
+        android:fontFamily="@string/common_google_play_services_restricted_profile_title"
+        android:textColor="#fff"
+        android:id="@+id/birthday"
+        android:layout_alignBottom="@+id/cover"
+        android:layout_alignRight="@+id/cover"
+        android:layout_alignEnd="@+id/cover" />
 </RelativeLayout>
