--- a/wishbucket_android/Wishbucket/app/src/main/res/layout/content_recommendation.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/res/layout/content_recommendation.xml
@@ -20,8 +20,29 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/background_window">
 
+    </ScrollView>
 
+    <LinearLayout
+        android:id="@+id/rowsContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:divider="@drawable/divider"
+        android:dividerPadding="16dp"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:showDividers="middle"
+        tools:context="tr.xip.rowswithimages.MainActivity"
+        android:layout_below="@+id/profile_picture"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true" />
 
 
 </RelativeLayout>
