--- a/wishbucket_android/Wishbucket/app/src/main/res/layout/content_home.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/res/layout/content_home.xml
@@ -21,41 +21,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/users_textView"
+            android:textSize="25dp"
+            android:textStyle="bold"
             android:layout_alignParentTop="true"
             android:layout_marginBottom="8dp"
             android:layout_alignLeft="@+id/horizontal_scroll"
             android:layout_alignStart="@+id/horizontal_scroll" />
 
-        <HorizontalScrollView
-        android:id="@+id/horizontal_scroll"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/users_textView"
-        android:layout_height="150dp">
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:dividerPadding="20dp"
-            android:orientation="horizontal" >
-        </LinearLayout>
-
-    </HorizontalScrollView>
-
-    <TextView
+        <TextView
         android:text="More from Wishbucket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="7dp"
+        android:textSize="25dp"
+        android:textStyle="bold"
         android:id="@+id/features_textView"
         android:layout_below="@+id/horizontal_scroll"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+
+
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="130dp"
+            android:layout_height="200dp"
             android:background="@drawable/fireworks"
             android:id="@+id/newYearCard"
             android:layout_below="@+id/features_textView"
@@ -68,91 +58,128 @@
                 android:text="New Year. Make it unforgettable"
                 android:textColor="#fff"
                 android:textSize="16dp"
+                android:paddingLeft="7dp"
+                android:paddingTop="7dp"
                 android:layout_margin="2dp"
                 android:id="@+id/nyTitle"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Coming soon"
+                android:paddingLeft="6dp"
+                android:textColor="#fff"
+                android:textSize="13dp"
                 android:layout_below="@+id/nyTitle"
-                android:layout_marginLeft="2dp"
-                android:text="Coming soon"
-                android:textColor="#fff"
-                android:textSize="10dp"/>
+                android:layout_alignLeft="@+id/nyTitle"
+                android:layout_alignStart="@+id/nyTitle"
+                android:id="@+id/textView4" />
 
         </RelativeLayout>
 
-    <LinearLayout
-        android:layout_marginTop="15dp"
+        <LinearLayout
+            android:layout_marginTop="15dp"
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_below="@id/newYearCard"
+            android:weightSum="2"
+            android:layout_height="130dp">
+
+            <RelativeLayout
+                android:text="More from wishbucket"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_below="@+id/features_textView"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_weight="1"
+                android:background="@drawable/flowers"
+                android:id="@+id/occasionsCard">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/ocTitle"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="0dp"
+                    android:text="Coming soon"
+                    android:textColor="#fff"
+                    android:textSize="10dp"
+                    android:id="@+id/textView" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Custom Occasion"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginLeft="0dp"
+                    android:textColor="#fff"
+                    android:textSize="22dp"
+                    android:id="@+id/ocTitle"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignLeft="@+id/textView"
+                    android:layout_alignStart="@+id/textView" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:text="More from wishbucket"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_below="@+id/features_textView"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:id="@+id/anniversaryCard">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/gift"
+                    android:scaleType="fitXY"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Anniversary presents"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginLeft="8dp"
+                    android:paddingLeft="5dp"
+                    android:textColor="#fff"
+                    android:textSize="22dp"
+                    android:layout_margin="2dp"
+                    android:id="@+id/anTitle"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/anTitle"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="0dp"
+                    android:text="Coming soon"
+                    android:textColor="#fff"
+                    android:textSize="10dp"/>
+
+            </RelativeLayout>
+        </LinearLayout>
+
+        <HorizontalScrollView
+        android:id="@+id/horizontal_scroll"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_below="@id/newYearCard"
-        android:weightSum="2"
-        android:layout_height="130dp">
-
-        <RelativeLayout
-            android:text="More from wishbucket"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_below="@+id/features_textView"
+            android:layout_height="250dp"
+            android:layout_below="@+id/users_textView"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_weight="1"
-            android:background="@drawable/flowers"
-            android:id="@+id/occasionsCard">
+            android:layout_alignParentStart="true">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Custom Occasion"
-                android:textColor="#fff"
-                android:textSize="16dp"
-                android:layout_margin="2dp"
-                android:id="@+id/ocTitle"/>
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:dividerPadding="20dp"
+            android:orientation="horizontal" >
+        </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/ocTitle"
-                android:layout_marginLeft="2dp"
-                android:text="Coming soon"
-                android:textColor="#fff"
-                android:textSize="10dp"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:text="More from wishbucket"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_below="@+id/features_textView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/gift"
-            android:layout_weight="1"
-            android:id="@+id/anniversaryCard">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Anniversary presents"
-                android:textColor="#fff"
-                android:textSize="16dp"
-                android:layout_margin="2dp"
-                android:id="@+id/anTitle"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/anTitle"
-                android:layout_marginLeft="2dp"
-                android:text="Coming soon"
-                android:textColor="#fff"
-                android:textSize="10dp"/>
-
-        </RelativeLayout>
-    </LinearLayout>
+    </HorizontalScrollView>
     </RelativeLayout>
 </ScrollView>
